updated prototype, reuploaded meetin minutes

--- a/Prototypes/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/MyProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,13 +129,12 @@ BoolProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultV
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,MyChar_C.Physics.ConstraintsGroup,MyChar_C.Rendering.TextureStreaming,
 FloatProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,MyChar_C.Physics.ConstraintsGroup,MyChar_C.Rendering.TextureStreaming,
 IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,MyChar_C.Physics.ConstraintsGroup,MyChar_C.Rendering.TextureStreaming,
-ObjectProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
+ObjectProperty=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 Item_Data_UI_C=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 StructProperty=K2Node_VariableGet.DefaultValueCategory.None,StructProperty.DefaultValueCategory.None,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -180,11 +179,13 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/UI/UI_GameHUD.UI_GameHUD
 OpenAssetsAtExit=/Game/UI/Inventory/MyChar.MyChar
+OpenAssetsAtExit=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap
 OpenAssetsAtExit=/Game/UI/Inventory/Item_Data_UI.Item_Data_UI
 OpenAssetsAtExit=/Game/UI/Inventory/Inventory_UI.Inventory_UI
+OpenAssetsAtExit=/Game/music.music
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -826,6 +827,38 @@ SkeletalMeshComponent.ComponentReplication=True
 SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
+ThirdPersonExampleMap_C.Tick=True
+ThirdPersonExampleMap_C.Replication=True
+ThirdPersonExampleMap_C.Input=True
+ThirdPersonExampleMap_C.Actor=True
+SoundCue.Attenuation=True
+SoundCue.AttenuationDistance=True
+SoundCue.AttenuationSpatialization=True
+SoundCue.Sound=True
+SoundCue.AttenuationAirAbsorption=True
+SoundCue.Subtitles=True
+SoundCue.AttenuationListenerFocus=True
+SoundCue.Debug=True
+SoundCue.AttenuationOcclusion=True
+SoundCue.Concurrency=True
+SoundCue.Effects=True
+SoundCue.Info=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Modulation=True
+AmbientSound.AttenuationDistance=True
+AmbientSound.AttenuationSpatialization=True
+AmbientSound.Filter=True
+AmbientSound.AttenuationAirAbsorption=True
+AmbientSound.AttenuationListenerFocus=True
+AmbientSound.AttenuationOcclusion=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Inventory/inventory_structure.inventory_structure=1
@@ -861,9 +894,9 @@ PanelWidget=
 Widget=
 Visual=
 Object=
-MyChar_C="\"Object.Current Hunger\" \"Object.Current Hunger\" "
-Character="\"Object.Current Hunger\" \"Object.Current Hunger\" "
-Pawn="\"Object.Current Hunger\" \"Object.Current Hunger\" "
+MyChar_C=
+Character=
+Pawn=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 UI_GameHUD_C="\"Object.MyCharReference\" \"Object.MyCharReference\" "
@@ -914,6 +947,7 @@ bDeleteExistingMorphTargetCurves=False
 LastLogListing=LoadErrors
 
 [PlacementMode]
+RecentlyPlaced=/Game/music.music;
 RecentlyPlaced=/Game/Inventory/MyChar.MyChar;
 RecentlyPlaced=/Game/Pet/Mesh/Incineroar_Skeleton.Incineroar_Skeleton;
 RecentlyPlaced=/Game/Pet/Mesh/Incineroar.Incineroar;
