--- a/Prototypes/GreyBox Scene/Garden_Level/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/GreyBox Scene/Garden_Level/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,9 +74,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Garden_Level/Garden_Level
-MRUItem1=/Game/Garden_Level/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonExampleMap
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Garden_Level/ThirdPersonExampleMap
+MRUItem3=/Game/ThirdPersonExampleMap
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -112,6 +112,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Garden_Level/Garden_Level
@@ -257,6 +259,179 @@ WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.VR=True
 WorldSettings.Tick=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameplayTagsDeveloperSettings.GameplayTags=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+EndUserSettings.Privacy=True
+EndUserSettings.PrivacyDetails=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Screenshots=True
+InputSettings.Bindings=True
+InputSettings.MouseProperties=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Console=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+NavigationSystem.Navigation=True
+NavigationSystem.NavigationSystem=True
+NavigationSystem.Navigation Enforcing=True
+NavigationSystem.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+NiagaraSettings.Niagara=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Editor=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Class Filtering=True
+AndroidRuntimeSettings.APKPackaging=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.AdvancedAPKPackaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+HTML5TargetSettings.Emscripten=True
+HTML5TargetSettings.Packaging=True
+HTML5TargetSettings.Launch=True
+HTML5TargetSettings.Amazon_S3=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Audio=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.Launch Images=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+LevelSequenceEditorSettings.Tracks=True
+OculusHMDRuntimeSettings.SplashScreen=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -319,7 +494,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LightingResults
 
 [PlacementMode]
 RecentlyPlaced=/Game/Models/table_bench.table_bench;
@@ -348,6 +523,7 @@ Volume=
 Brush=
 StaticMesh=
 Object=
+EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Models/Level_Changing_Stairs.Level_Changing_Stairs=1
@@ -388,7 +564,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/studies/UOS games uni/Level 6 Year 3/Group Project/GreyBox Scene/Garden_Level/Content/Garden_Level
+UNR=../../../../../../Users/Games/Desktop/level-6-l6-group-9/Prototypes/GreyBox Scene/Garden_Level/Content/Garden_Level
 BRUSH=../../../../../../Users/Games/Documents/Unreal Projects/Year3_Group9_GreyBox/Content/
 FBX=../../../../../../Users/Games/Documents/Unreal Projects/Year3_Group9_GreyBox/Content/
 FBXAnim=../../../../../../Users/Games/Documents/Unreal Projects/Year3_Group9_GreyBox/Content/
@@ -938,5 +1114,7 @@ MovieSceneCapture.TimeStamp=2017.09.26-13.10.20
 MovieSceneCapture.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2017.09.26-13.10.24
 StaticMeshEditor.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2017.09.26-13.10.16
+ExternalImagePicker.LastCompileMethod=Unknown
 
 
