--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,12 +89,14 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Ninja_Rabbit_colour_sprite_sheet__Fixed_.Ninja_Rabbit_colour_sprite_sheet__Fixed_
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -151,6 +153,19 @@ WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.VR=True
 WorldSettings.Tick=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+PaperFlipbook.Sprite=True
+PaperExtractSpritesSettings.Settings=True
+PaperExtractSpritesSettings.Naming=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -182,7 +197,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=F:/New prototype/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
+UNR=../../../../../../Users/Games/Documents/GitHub/level-6-l6-group-9/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
@@ -728,5 +743,17 @@ HierarchicalLODOutliner.TimeStamp=2017.10.04-10.20.51
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.10.04-10.20.54
 MovieSceneCapture.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2017.10.04-08.43.09
+TextureEditor.LastCompileMethod=Unknown
+
+[AssetEditorToolkitTabLocation]
+/Game/2DSideScrollerBP/Sprites/Ninja_Rabbit_colour_sprite_sheet__Fixed.Ninja_Rabbit_colour_sprite_sheet__Fixed=1
+/Game/2DSideScrollerBP/Sprites/Samurai_Colour_sprite_sheet.Samurai_Colour_sprite_sheet=1
+/Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Spider_Colour_sprite_sheet.Samurai_Spider_Colour_sprite_sheet=1
+/Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Spider_Colour_sprite_sheet_Walking_Animation.Samurai_Spider_Colour_sprite_sheet_Walking_Animation=1
+/Game/2DSideScrollerBP/Sprites/Enemies/Shogun_Spider_Colour_sprite_sheet.Shogun_Spider_Colour_sprite_sheet=1
+/Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Colour_sprite_sheet__Fixed_.Samurai_Colour_sprite_sheet__Fixed_=1
+/Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Colour_sprite_sheet__Fixed.Samurai_Colour_sprite_sheet__Fixed=1
+/Game/2DSideScrollerBP/Sprites/Iceberg_Lettuce.Iceberg_Lettuce=1
 
 
