made a tile map for our game
taken the tile set that was provided and following the level design plan, i have made the level using the

--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,14 +89,13 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/objects
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/Ninja_Rabbit_colour_sprite_sheet__Fixed_.Ninja_Rabbit_colour_sprite_sheet__Fixed_
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -166,6 +165,14 @@ PaperSprite.Sprite=True
 PaperSprite.Sockets=True
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
+PaperExtractSpriteGridSettings.Grid=True
+PaperTileSet.TileSet=True
+PaperTileSet.SingleTileEditor=True
+PaperTileMap.Tile Map=True
+PaperTileMap.SelectedLayer=True
+PaperTileMap.Setup=True
+PaperTileMap.Collision=True
+PaperTileMap.File Path=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -177,6 +184,8 @@ RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFact
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[37]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[103]\" \"Object.Sprite.PerTileData.PerTileData[115]\" \"Object.Sprite.PerTileData.PerTileData[118]\" \"Object.Sprite.PerTileData.PerTileData[120]\" \"Object.Sprite.PerTileData.PerTileData[121]\" \"Object.Sprite.PerTileData.PerTileData[135]\" \"Object.Sprite.PerTileData.PerTileData[136]\" \"Object.Sprite.PerTileData.PerTileData[149]\" \"Object.Sprite.PerTileData.PerTileData[173]\" \"Object.Sprite.PerTileData.PerTileData[218]\" \"Object.Sprite.PerTileData.PerTileData[255]\" "
+Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[37]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[103]\" \"Object.Sprite.PerTileData.PerTileData[115]\" \"Object.Sprite.PerTileData.PerTileData[118]\" \"Object.Sprite.PerTileData.PerTileData[120]\" \"Object.Sprite.PerTileData.PerTileData[121]\" \"Object.Sprite.PerTileData.PerTileData[135]\" \"Object.Sprite.PerTileData.PerTileData[136]\" \"Object.Sprite.PerTileData.PerTileData[149]\" \"Object.Sprite.PerTileData.PerTileData[173]\" \"Object.Sprite.PerTileData.PerTileData[218]\" \"Object.Sprite.PerTileData.PerTileData[255]\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -201,7 +210,7 @@ UNR=../../../../../../Users/Games/Documents/GitHub/level-6-l6-group-9/Prototypes
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
-GenericImport=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
+GenericImport=../../../../../../Users/Games/Documents/GitHub/level-6-l6-group-9/Artwork/Current Idea/PNG/Tileset/Tileset_Sheet_Ver2.0.png
 GenericExport=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericOpen=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 GenericSave=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
@@ -247,24 +256,24 @@ AnimationModifiers.TimeStamp=2017.10.04-10.20.45
 AnimationModifiers.LastCompileMethod=Unknown
 PropertyEditor.TimeStamp=2017.10.04-10.20.55
 PropertyEditor.LastCompileMethod=Unknown
-OnlineSubsystem.TimeStamp=2017.10.04-10.21.18
-OnlineSubsystem.LastCompileMethod=Unknown
+OnlineSubsystem.TimeStamp=2017.10.24-13.29.34
+OnlineSubsystem.LastCompileMethod=External
 HTTP.TimeStamp=2017.10.04-10.20.51
 HTTP.LastCompileMethod=Unknown
 SSL.TimeStamp=2017.10.04-10.20.57
 SSL.LastCompileMethod=Unknown
 XMPP.TimeStamp=2017.10.04-10.21.00
 XMPP.LastCompileMethod=Unknown
-OnlineSubsystemUtils.TimeStamp=2017.10.04-10.21.21
-OnlineSubsystemUtils.LastCompileMethod=Unknown
-OnlineBlueprintSupport.TimeStamp=2017.10.04-10.21.21
-OnlineBlueprintSupport.LastCompileMethod=Unknown
-ExampleDeviceProfileSelector.TimeStamp=2017.10.04-10.21.22
-ExampleDeviceProfileSelector.LastCompileMethod=Unknown
-OculusHMD.TimeStamp=2017.10.04-10.21.29
-OculusHMD.LastCompileMethod=Unknown
-SteamVR.TimeStamp=2017.10.04-10.21.30
-SteamVR.LastCompileMethod=Unknown
+OnlineSubsystemUtils.TimeStamp=2017.10.24-13.29.41
+OnlineSubsystemUtils.LastCompileMethod=External
+OnlineBlueprintSupport.TimeStamp=2017.10.24-13.29.41
+OnlineBlueprintSupport.LastCompileMethod=External
+ExampleDeviceProfileSelector.TimeStamp=2017.10.24-13.29.57
+ExampleDeviceProfileSelector.LastCompileMethod=External
+OculusHMD.TimeStamp=2017.10.24-13.30.31
+OculusHMD.LastCompileMethod=External
+SteamVR.TimeStamp=2017.10.24-13.30.37
+SteamVR.LastCompileMethod=External
 PhysXCooking.TimeStamp=2017.10.04-10.20.55
 PhysXCooking.LastCompileMethod=Unknown
 Settings.TimeStamp=2017.10.04-10.20.56
@@ -433,46 +442,46 @@ ClothingSystemEditor.TimeStamp=2017.10.04-10.20.47
 ClothingSystemEditor.LastCompileMethod=Unknown
 PacketHandler.TimeStamp=2017.10.04-10.20.54
 PacketHandler.LastCompileMethod=Unknown
-WmfMedia.TimeStamp=2017.10.04-10.21.15
-WmfMedia.LastCompileMethod=Unknown
-WindowsMoviePlayer.TimeStamp=2017.10.04-10.21.31
-WindowsMoviePlayer.LastCompileMethod=Unknown
-Paper2D.TimeStamp=2017.10.04-10.21.13
-Paper2D.LastCompileMethod=Unknown
-LightPropagationVolumeRuntime.TimeStamp=2017.10.04-10.21.13
-LightPropagationVolumeRuntime.LastCompileMethod=Unknown
-AssetManagerEditor.TimeStamp=2017.10.04-10.21.13
-AssetManagerEditor.LastCompileMethod=Unknown
+WmfMedia.TimeStamp=2017.10.24-13.29.23
+WmfMedia.LastCompileMethod=External
+WindowsMoviePlayer.TimeStamp=2017.10.24-13.30.45
+WindowsMoviePlayer.LastCompileMethod=External
+Paper2D.TimeStamp=2017.10.24-13.27.09
+Paper2D.LastCompileMethod=External
+LightPropagationVolumeRuntime.TimeStamp=2017.10.24-13.27.14
+LightPropagationVolumeRuntime.LastCompileMethod=External
+AssetManagerEditor.TimeStamp=2017.10.24-13.27.17
+AssetManagerEditor.LastCompileMethod=External
 ContentBrowser.TimeStamp=2017.10.04-10.20.47
 ContentBrowser.LastCompileMethod=Unknown
 GraphEditor.TimeStamp=2017.10.04-10.20.51
 GraphEditor.LastCompileMethod=Unknown
-FacialAnimation.TimeStamp=2017.10.04-10.21.13
-FacialAnimation.LastCompileMethod=Unknown
-FacialAnimationEditor.TimeStamp=2017.10.04-10.21.13
-FacialAnimationEditor.LastCompileMethod=Unknown
-GameplayTagsEditor.TimeStamp=2017.10.04-10.21.14
-GameplayTagsEditor.LastCompileMethod=Unknown
-TcpMessaging.TimeStamp=2017.10.04-10.21.15
-TcpMessaging.LastCompileMethod=Unknown
-UdpMessaging.TimeStamp=2017.10.04-10.21.15
-UdpMessaging.LastCompileMethod=Unknown
-ImmediatePhysics.TimeStamp=2017.10.04-10.21.28
-ImmediatePhysics.LastCompileMethod=Unknown
-ImmediatePhysicsEditor.TimeStamp=2017.10.04-10.21.28
-ImmediatePhysicsEditor.LastCompileMethod=Unknown
-LocationServicesBPLibrary.TimeStamp=2017.10.04-10.21.28
-LocationServicesBPLibrary.LastCompileMethod=Unknown
-OculusEditor.TimeStamp=2017.10.04-10.21.29
-OculusEditor.LastCompileMethod=Unknown
-PhysXVehicles.TimeStamp=2017.10.04-10.21.29
-PhysXVehicles.LastCompileMethod=Unknown
-PhysXVehiclesEditor.TimeStamp=2017.10.04-10.21.29
-PhysXVehiclesEditor.LastCompileMethod=Unknown
-RuntimePhysXCooking.TimeStamp=2017.10.04-10.21.29
-RuntimePhysXCooking.LastCompileMethod=Unknown
-Paper2DEditor.TimeStamp=2017.10.04-10.21.13
-Paper2DEditor.LastCompileMethod=Unknown
+FacialAnimation.TimeStamp=2017.10.24-13.27.17
+FacialAnimation.LastCompileMethod=External
+FacialAnimationEditor.TimeStamp=2017.10.24-13.27.17
+FacialAnimationEditor.LastCompileMethod=External
+GameplayTagsEditor.TimeStamp=2017.10.24-13.27.18
+GameplayTagsEditor.LastCompileMethod=External
+TcpMessaging.TimeStamp=2017.10.24-13.29.24
+TcpMessaging.LastCompileMethod=External
+UdpMessaging.TimeStamp=2017.10.24-13.29.25
+UdpMessaging.LastCompileMethod=External
+ImmediatePhysics.TimeStamp=2017.10.24-13.30.14
+ImmediatePhysics.LastCompileMethod=External
+ImmediatePhysicsEditor.TimeStamp=2017.10.24-13.30.14
+ImmediatePhysicsEditor.LastCompileMethod=External
+LocationServicesBPLibrary.TimeStamp=2017.10.24-13.30.28
+LocationServicesBPLibrary.LastCompileMethod=External
+OculusEditor.TimeStamp=2017.10.24-13.30.31
+OculusEditor.LastCompileMethod=External
+PhysXVehicles.TimeStamp=2017.10.24-13.30.32
+PhysXVehicles.LastCompileMethod=External
+PhysXVehiclesEditor.TimeStamp=2017.10.24-13.30.32
+PhysXVehiclesEditor.LastCompileMethod=External
+RuntimePhysXCooking.TimeStamp=2017.10.24-13.30.33
+RuntimePhysXCooking.LastCompileMethod=External
+Paper2DEditor.TimeStamp=2017.10.24-13.27.09
+Paper2DEditor.LastCompileMethod=External
 LevelEditor.TimeStamp=2017.10.04-10.20.52
 LevelEditor.LastCompileMethod=Unknown
 MainFrame.TimeStamp=2017.10.04-10.20.53
@@ -483,64 +492,64 @@ PixelInspectorModule.TimeStamp=2017.10.04-10.20.55
 PixelInspectorModule.LastCompileMethod=Unknown
 MeshPaint.TimeStamp=2017.10.04-10.20.53
 MeshPaint.LastCompileMethod=Unknown
-PaperSpriteSheetImporter.TimeStamp=2017.10.04-10.21.13
-PaperSpriteSheetImporter.LastCompileMethod=Unknown
-PaperTiledImporter.TimeStamp=2017.10.04-10.21.13
-PaperTiledImporter.LastCompileMethod=Unknown
-LightPropagationVolumeEditor.TimeStamp=2017.10.04-10.21.13
-LightPropagationVolumeEditor.LastCompileMethod=Unknown
-GitSourceControl.TimeStamp=2017.10.04-10.21.13
-GitSourceControl.LastCompileMethod=Unknown
+PaperSpriteSheetImporter.TimeStamp=2017.10.24-13.27.09
+PaperSpriteSheetImporter.LastCompileMethod=External
+PaperTiledImporter.TimeStamp=2017.10.24-13.27.09
+PaperTiledImporter.LastCompileMethod=External
+LightPropagationVolumeEditor.TimeStamp=2017.10.24-13.27.14
+LightPropagationVolumeEditor.LastCompileMethod=External
+GitSourceControl.TimeStamp=2017.10.24-13.27.16
+GitSourceControl.LastCompileMethod=External
 SourceControl.TimeStamp=2017.10.04-10.20.57
 SourceControl.LastCompileMethod=Unknown
-PerforceSourceControl.TimeStamp=2017.10.04-10.21.13
-PerforceSourceControl.LastCompileMethod=Unknown
-SubversionSourceControl.TimeStamp=2017.10.04-10.21.13
-SubversionSourceControl.LastCompileMethod=Unknown
-UObjectPlugin.TimeStamp=2017.10.04-10.21.13
-UObjectPlugin.LastCompileMethod=Unknown
-VisualStudioSourceCodeAccess.TimeStamp=2017.10.04-10.21.13
-VisualStudioSourceCodeAccess.LastCompileMethod=Unknown
+PerforceSourceControl.TimeStamp=2017.10.24-13.27.16
+PerforceSourceControl.LastCompileMethod=External
+SubversionSourceControl.TimeStamp=2017.10.24-13.27.17
+SubversionSourceControl.LastCompileMethod=External
+UObjectPlugin.TimeStamp=2017.10.24-13.27.17
+UObjectPlugin.LastCompileMethod=External
+VisualStudioSourceCodeAccess.TimeStamp=2017.10.24-13.27.17
+VisualStudioSourceCodeAccess.LastCompileMethod=External
 DesktopPlatform.TimeStamp=2017.10.04-10.20.48
 DesktopPlatform.LastCompileMethod=Unknown
-MobileLauncherProfileWizard.TimeStamp=2017.10.04-10.21.14
-MobileLauncherProfileWizard.LastCompileMethod=Unknown
-PluginBrowser.TimeStamp=2017.10.04-10.21.14
-PluginBrowser.LastCompileMethod=Unknown
-SpeedTreeImporter.TimeStamp=2017.10.04-10.21.14
-SpeedTreeImporter.LastCompileMethod=Unknown
-AlembicImporter.TimeStamp=2017.10.04-10.21.14
-AlembicImporter.LastCompileMethod=Unknown
-AlembicLibrary.TimeStamp=2017.10.04-10.21.14
-AlembicLibrary.LastCompileMethod=Unknown
+MobileLauncherProfileWizard.TimeStamp=2017.10.24-13.27.18
+MobileLauncherProfileWizard.LastCompileMethod=External
+PluginBrowser.TimeStamp=2017.10.24-13.27.18
+PluginBrowser.LastCompileMethod=External
+SpeedTreeImporter.TimeStamp=2017.10.24-13.27.19
+SpeedTreeImporter.LastCompileMethod=External
+AlembicImporter.TimeStamp=2017.10.24-13.27.45
+AlembicImporter.LastCompileMethod=External
+AlembicLibrary.TimeStamp=2017.10.24-13.27.45
+AlembicLibrary.LastCompileMethod=External
 GeometryCache.TimeStamp=2017.10.04-10.20.51
 GeometryCache.LastCompileMethod=Unknown
 GeometryCacheEd.TimeStamp=2017.10.04-10.20.51
 GeometryCacheEd.LastCompileMethod=Unknown
-HTML5Networking.TimeStamp=2017.10.04-10.21.14
-HTML5Networking.LastCompileMethod=Unknown
-MediaPlayerEditor.TimeStamp=2017.10.04-10.21.15
-MediaPlayerEditor.LastCompileMethod=Unknown
-OnlineSubsystemNull.TimeStamp=2017.10.04-10.21.19
-OnlineSubsystemNull.LastCompileMethod=Unknown
-AndroidPermission.TimeStamp=2017.10.04-10.21.22
-AndroidPermission.LastCompileMethod=Unknown
-ArchVisCharacter.TimeStamp=2017.10.04-10.21.22
-ArchVisCharacter.LastCompileMethod=Unknown
-CableComponent.TimeStamp=2017.10.04-10.21.22
-CableComponent.LastCompileMethod=Unknown
-CustomMeshComponent.TimeStamp=2017.10.04-10.21.22
-CustomMeshComponent.LastCompileMethod=Unknown
-MobilePatchingUtils.TimeStamp=2017.10.04-10.21.28
-MobilePatchingUtils.LastCompileMethod=Unknown
-OculusInput.TimeStamp=2017.10.04-10.21.29
-OculusInput.LastCompileMethod=Unknown
-ProceduralMeshComponent.TimeStamp=2017.10.04-10.21.29
-ProceduralMeshComponent.LastCompileMethod=Unknown
-ProceduralMeshComponentEditor.TimeStamp=2017.10.04-10.21.29
-ProceduralMeshComponentEditor.LastCompileMethod=Unknown
-SteamVRController.TimeStamp=2017.10.04-10.21.30
-SteamVRController.LastCompileMethod=Unknown
+HTML5Networking.TimeStamp=2017.10.24-13.28.59
+HTML5Networking.LastCompileMethod=External
+MediaPlayerEditor.TimeStamp=2017.10.24-13.29.22
+MediaPlayerEditor.LastCompileMethod=External
+OnlineSubsystemNull.TimeStamp=2017.10.24-13.29.38
+OnlineSubsystemNull.LastCompileMethod=External
+AndroidPermission.TimeStamp=2017.10.24-13.29.53
+AndroidPermission.LastCompileMethod=External
+ArchVisCharacter.TimeStamp=2017.10.24-13.29.54
+ArchVisCharacter.LastCompileMethod=External
+CableComponent.TimeStamp=2017.10.24-13.29.55
+CableComponent.LastCompileMethod=External
+CustomMeshComponent.TimeStamp=2017.10.24-13.29.56
+CustomMeshComponent.LastCompileMethod=External
+MobilePatchingUtils.TimeStamp=2017.10.24-13.30.30
+MobilePatchingUtils.LastCompileMethod=External
+OculusInput.TimeStamp=2017.10.24-13.30.31
+OculusInput.LastCompileMethod=External
+ProceduralMeshComponent.TimeStamp=2017.10.24-13.30.33
+ProceduralMeshComponent.LastCompileMethod=External
+ProceduralMeshComponentEditor.TimeStamp=2017.10.24-13.30.33
+ProceduralMeshComponentEditor.LastCompileMethod=External
+SteamVRController.TimeStamp=2017.10.24-13.30.37
+SteamVRController.LastCompileMethod=External
 TaskGraph.TimeStamp=2017.10.04-10.20.58
 TaskGraph.LastCompileMethod=Unknown
 ProfilerService.TimeStamp=2017.10.04-10.20.55
@@ -675,34 +684,34 @@ ViewportSnapping.TimeStamp=2017.10.04-10.20.59
 ViewportSnapping.LastCompileMethod=Unknown
 SessionServices.TimeStamp=2017.10.04-10.20.56
 SessionServices.LastCompileMethod=Unknown
-SmartSnapping.TimeStamp=2017.10.04-10.21.13
-SmartSnapping.LastCompileMethod=Unknown
-AudioCapture.TimeStamp=2017.10.04-10.21.13
-AudioCapture.LastCompileMethod=Unknown
+SmartSnapping.TimeStamp=2017.10.24-13.27.09
+SmartSnapping.LastCompileMethod=External
+AudioCapture.TimeStamp=2017.10.24-13.27.17
+AudioCapture.LastCompileMethod=External
 SequenceRecorder.TimeStamp=2017.10.04-10.20.56
 SequenceRecorder.LastCompileMethod=Unknown
-CharacterAI.TimeStamp=2017.10.04-10.21.14
-CharacterAI.LastCompileMethod=Unknown
-AndroidMediaEditor.TimeStamp=2017.10.04-10.21.15
-AndroidMediaEditor.LastCompileMethod=Unknown
-AndroidMediaFactory.TimeStamp=2017.10.04-10.21.15
-AndroidMediaFactory.LastCompileMethod=Unknown
+CharacterAI.TimeStamp=2017.10.24-13.28.53
+CharacterAI.LastCompileMethod=External
+AndroidMediaEditor.TimeStamp=2017.10.24-13.29.21
+AndroidMediaEditor.LastCompileMethod=External
+AndroidMediaFactory.TimeStamp=2017.10.24-13.29.21
+AndroidMediaFactory.LastCompileMethod=External
 Media.TimeStamp=2017.10.04-10.20.53
 Media.LastCompileMethod=Unknown
-AvfMediaEditor.TimeStamp=2017.10.04-10.21.15
-AvfMediaEditor.LastCompileMethod=Unknown
-AvfMediaFactory.TimeStamp=2017.10.04-10.21.15
-AvfMediaFactory.LastCompileMethod=Unknown
-WmfMediaEditor.TimeStamp=2017.10.04-10.21.15
-WmfMediaEditor.LastCompileMethod=Unknown
-WmfMediaFactory.TimeStamp=2017.10.04-10.21.15
-WmfMediaFactory.LastCompileMethod=Unknown
-LevelSequenceEditor.TimeStamp=2017.10.04-10.21.16
-LevelSequenceEditor.LastCompileMethod=Unknown
+AvfMediaEditor.TimeStamp=2017.10.24-13.29.22
+AvfMediaEditor.LastCompileMethod=External
+AvfMediaFactory.TimeStamp=2017.10.24-13.29.22
+AvfMediaFactory.LastCompileMethod=External
+WmfMediaEditor.TimeStamp=2017.10.24-13.29.23
+WmfMediaEditor.LastCompileMethod=External
+WmfMediaFactory.TimeStamp=2017.10.24-13.29.23
+WmfMediaFactory.LastCompileMethod=External
+LevelSequenceEditor.TimeStamp=2017.10.24-13.29.25
+LevelSequenceEditor.LastCompileMethod=External
 PlacementMode.TimeStamp=2017.10.04-10.20.55
 PlacementMode.LastCompileMethod=Unknown
-MatineeToLevelSequence.TimeStamp=2017.10.04-10.21.16
-MatineeToLevelSequence.LastCompileMethod=Unknown
+MatineeToLevelSequence.TimeStamp=2017.10.24-13.29.26
+MatineeToLevelSequence.LastCompileMethod=External
 AutomationWorker.TimeStamp=2017.10.04-10.20.46
 AutomationWorker.LastCompileMethod=Unknown
 SequenceRecorderSections.TimeStamp=2017.10.04-10.20.56
@@ -755,5 +764,8 @@ TextureEditor.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Colour_sprite_sheet__Fixed_.Samurai_Colour_sprite_sheet__Fixed_=1
 /Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Colour_sprite_sheet__Fixed.Samurai_Colour_sprite_sheet__Fixed=1
 /Game/2DSideScrollerBP/Sprites/Iceberg_Lettuce.Iceberg_Lettuce=1
+/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sheet_Ver2_0_TileSet.Tileset_Sheet_Ver2_0_TileSet=1
+/Game/2DSideScrollerBP/Sprites/tileset/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level=1
+/Game/2DSideScrollerBP/Sprites/objects/Japanese_ladder_TileSet.Japanese_ladder_TileSet=1
 
 
