changes to the prototype

--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,9 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/objects
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/tileset
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -173,8 +175,95 @@ PaperTileMap.SelectedLayer=True
 PaperTileMap.Setup=True
 PaperTileMap.Collision=True
 PaperTileMap.File Path=True
+PaperTileMapActor.TransformCommon=True
+PaperTileMapActor.Tile Map=True
+PaperTileMapActor.Materials=True
+PaperTileMapActor.Physics=True
+PaperTileMapActor.Collision=True
+PaperTileMapActor.Lighting=True
+PaperTileMapActor.Rendering=True
+PaperTileMapActor.Tags=True
+PaperTileMapActor.Activation=True
+PaperTileMapActor.Cooking=True
+PaperTileMapActor.Input=True
+PaperTileMapActor.Actor=True
+2DSideScrollerCharacter_C.TransformCommon=True
+2DSideScrollerCharacter_C.Sprite=True
+2DSideScrollerCharacter_C.Physics=True
+2DSideScrollerCharacter_C.Collision=True
+2DSideScrollerCharacter_C.Lighting=True
+2DSideScrollerCharacter_C.Rendering=True
+2DSideScrollerCharacter_C.Tags=True
+2DSideScrollerCharacter_C.Activation=True
+2DSideScrollerCharacter_C.Cooking=True
+2DSideScrollerCharacter_C.Character=True
+2DSideScrollerCharacter_C.Character Movement: Jumping / Falling=True
+2DSideScrollerCharacter_C.Character Movement (General Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Walking=True
+2DSideScrollerCharacter_C.Character Movement: Swimming=True
+2DSideScrollerCharacter_C.Character Movement: Flying=True
+2DSideScrollerCharacter_C.Character Movement: Custom Movement=True
+2DSideScrollerCharacter_C.Character Movement (Rotation Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Physics Interaction=True
+2DSideScrollerCharacter_C.Character Movement (Networking)=True
+2DSideScrollerCharacter_C.Character Movement=True
+2DSideScrollerCharacter_C.Character Movement: Avoidance=True
+2DSideScrollerCharacter_C.Character Movement: NavMesh Movement=True
+2DSideScrollerCharacter_C.RootMotion=True
+2DSideScrollerCharacter_C.NavMovement=True
+2DSideScrollerCharacter_C.Velocity=True
+2DSideScrollerCharacter_C.PlanarMovement=True
+2DSideScrollerCharacter_C.MovementComponent=True
+2DSideScrollerCharacter_C.Shape=True
+2DSideScrollerCharacter_C.Navigation=True
+2DSideScrollerCharacter_C.Camera=True
+2DSideScrollerCharacter_C.Pawn=True
+2DSideScrollerCharacter_C.Input=True
+2DSideScrollerCharacter_C.Actor=True
+2DSideScrollerCharacter_C.Materials=True
+2DSideScrollerCharacter_C.Default=True
+2DSideScrollerCharacter_C.Tick=True
+2DSideScrollerCharacter_C.Replication=True
+2DSideScrollerCharacter_C.Variable=True
+2DSideScrollerCharacter_C.Sockets=True
+2DSideScrollerCharacter_C.ComponentReplication=True
+2DSideScrollerCharacter_C.Events=True
+REINST_2DSideScrollerCharacter_C_25.TransformCommon=True
+REINST_2DSideScrollerCharacter_C_25.Sprite=True
+REINST_2DSideScrollerCharacter_C_25.Physics=True
+REINST_2DSideScrollerCharacter_C_25.Collision=True
+REINST_2DSideScrollerCharacter_C_25.Lighting=True
+REINST_2DSideScrollerCharacter_C_25.Rendering=True
+REINST_2DSideScrollerCharacter_C_25.Tags=True
+REINST_2DSideScrollerCharacter_C_25.Activation=True
+REINST_2DSideScrollerCharacter_C_25.Cooking=True
+REINST_2DSideScrollerCharacter_C_25.Character=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: Jumping / Falling=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement (General Settings)=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: Walking=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: Swimming=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: Flying=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: Custom Movement=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement (Rotation Settings)=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: Physics Interaction=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement (Networking)=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: Avoidance=True
+REINST_2DSideScrollerCharacter_C_25.Character Movement: NavMesh Movement=True
+REINST_2DSideScrollerCharacter_C_25.RootMotion=True
+REINST_2DSideScrollerCharacter_C_25.NavMovement=True
+REINST_2DSideScrollerCharacter_C_25.Velocity=True
+REINST_2DSideScrollerCharacter_C_25.PlanarMovement=True
+REINST_2DSideScrollerCharacter_C_25.MovementComponent=True
+REINST_2DSideScrollerCharacter_C_25.Shape=True
+REINST_2DSideScrollerCharacter_C_25.Navigation=True
+REINST_2DSideScrollerCharacter_C_25.Camera=True
+REINST_2DSideScrollerCharacter_C_25.Pawn=True
+REINST_2DSideScrollerCharacter_C_25.Input=True
+REINST_2DSideScrollerCharacter_C_25.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
@@ -184,8 +273,8 @@ RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFact
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[37]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[103]\" \"Object.Sprite.PerTileData.PerTileData[115]\" \"Object.Sprite.PerTileData.PerTileData[118]\" \"Object.Sprite.PerTileData.PerTileData[120]\" \"Object.Sprite.PerTileData.PerTileData[121]\" \"Object.Sprite.PerTileData.PerTileData[135]\" \"Object.Sprite.PerTileData.PerTileData[136]\" \"Object.Sprite.PerTileData.PerTileData[149]\" \"Object.Sprite.PerTileData.PerTileData[173]\" \"Object.Sprite.PerTileData.PerTileData[218]\" \"Object.Sprite.PerTileData.PerTileData[255]\" "
-Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[37]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[103]\" \"Object.Sprite.PerTileData.PerTileData[115]\" \"Object.Sprite.PerTileData.PerTileData[118]\" \"Object.Sprite.PerTileData.PerTileData[120]\" \"Object.Sprite.PerTileData.PerTileData[121]\" \"Object.Sprite.PerTileData.PerTileData[135]\" \"Object.Sprite.PerTileData.PerTileData[136]\" \"Object.Sprite.PerTileData.PerTileData[149]\" \"Object.Sprite.PerTileData.PerTileData[173]\" \"Object.Sprite.PerTileData.PerTileData[218]\" \"Object.Sprite.PerTileData.PerTileData[255]\" "
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" "
+Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -754,6 +843,10 @@ MovieSceneCapture.TimeStamp=2017.10.04-10.20.54
 MovieSceneCapture.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.10.04-08.43.09
 TextureEditor.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2017.10.02-13.02.09
+BlueprintProfiler.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2017.10.02-13.02.00
+BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Sprites/Ninja_Rabbit_colour_sprite_sheet__Fixed.Ninja_Rabbit_colour_sprite_sheet__Fixed=1
@@ -767,5 +860,6 @@ TextureEditor.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sheet_Ver2_0_TileSet.Tileset_Sheet_Ver2_0_TileSet=1
 /Game/2DSideScrollerBP/Sprites/tileset/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level=1
 /Game/2DSideScrollerBP/Sprites/objects/Japanese_ladder_TileSet.Japanese_ladder_TileSet=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
 
 
