--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-5PTATBL
 LastExecutedLaunchName=DESKTOP-5PTATBL
 LastExecutedPIEPreviewDevice=
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -90,7 +91,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/Enemies
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Sprites/tileset
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -99,6 +100,9 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_one_LS.Bird_Enemy_one_LS
+OpenAssetsAtExit=/Game/Tileset_ver_04_TileSet.Tileset_ver_04_TileSet
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Sprites/tileset/Ninja_Bunnies_First_Level.Ninja_Bunnies_First_Level
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -503,7 +507,7 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/tileset/Tileset_Sheet_Ver2_0_Sprit
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" "
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[26]\" \"Object.Sprite.PerTileData.PerTileData[28]\" \"Object.Sprite.PerTileData.PerTileData[30]\" \"Object.Sprite.PerTileData.PerTileData[32]\" \"Object.Sprite.PerTileData.PerTileData[34]\" \"Object.Sprite.PerTileData.PerTileData[36]\" \"Object.Sprite.PerTileData.PerTileData[38]\" \"Object.Sprite.PerTileData.PerTileData[52]\" \"Object.Sprite.PerTileData.PerTileData[53]\" \"Object.Sprite.PerTileData.PerTileData[54]\" "
 Object=
 
 [RootWindow]
@@ -525,7 +529,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Administrator/Documents/GitHub/level-6-l6-group-9/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
+UNR=../../../../../../Users/Games/Desktop/level-6-l6-group-9/Prototypes/New Idea/Ninja_Bunnies/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBX=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
 FBXAnim=../../../../../../Users/Administrator/Documents/Unreal Projects/Ninja_Bunnies/Content/
@@ -1099,6 +1103,7 @@ SynthBenchmark.LastCompileMethod=Unknown
 /Game/2DSideScrollerBP/Blueprints/Platform_Large.Platform_Large=1
 /Game/2DSideScrollerBP/Blueprints/Platform_Small.Platform_Small=1
 /Game/2DSideScrollerBP/Sprites/Player/Ninja_Bunny_Running_Animation.Ninja_Bunny_Running_Animation=1
+/Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Colour_sprite_sheet__Fixed__Sprite_0.Samurai_Colour_sprite_sheet__Fixed__Sprite_0=1
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
