finished enemy movement using level sequencing following the level design plan

--- a/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Prototypes/New Idea/Ninja_Bunnies/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-5PTATBL
 LastExecutedLaunchName=DESKTOP-5PTATBL
 LastExecutedPIEPreviewDevice=
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -99,7 +100,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -491,13 +492,17 @@ PaperFlipbookActor.Input=True
 PaperFlipbookActor.Actor=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_Four_LS.Bird_Enemy_Four_LS;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_Seven_LS.Bird_Enemy_Seven_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Bird_Enemy.Bird_Enemy;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_Four_LS.Spider_Enemy_Four_LS;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Spider_Enemy.Spider_Enemy;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_Six_LS.Bird_Enemy_Six_LS;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bired_Enemy_Five_LS.Bired_Enemy_Five_LS;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_Four_LS.Bird_Enemy_Four_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Enemies/Samurai_Colour_sprite_sheet__Fixed.Samurai_Colour_sprite_sheet__Fixed;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Platform_Four_Small.Platform_Four_Small;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_three_LS.Bird_Enemy_three_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Three_LS.Spider_Three_LS;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Spider_Enemy.Spider_Enemy;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_two_LS.Spider_Enemy_two_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Spider_Enemy_one_LS.Spider_Enemy_one_LS;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Bird_Enemy_two_LS.Bird_Enemy_two_LS;
@@ -507,10 +512,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Platform_Large.Platform_Large;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Platform_Four_Large.Platform_Four_Large;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Platform_Three_Small.Platform_Three_Small;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Platform_Three_Large.Platform_Three_Large;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Platform_One_Small.Platform_One_Small;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Platform_Two_Small.Platform_Two_Small;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Level_Sequencers/Platform_One_Large.Platform_One_Large;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Platform_Small.Platform_Small;
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
